--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,30 @@
+html {
+  font-family: 'Helvetica', sans-serif;
+}
+
 .container {
   margin-left: 25%;
   margin-right: 25%;
 }
 
-#review-form {
+#moviereview {
   width: 100%;
+}
+
+.btn {
+  display: inline-block;
+  border: none;
+  padding: 1rem 2rem;
+  margin: 0;
+  text-decoration: none;
+  background: #0069ed;
+  color: #ffffff;
+  font-family: sans-serif;
+  font-size: 1rem;
+  cursor: pointer;
+  text-align: center;
+  transition: background 250ms ease-in-out, 
+              transform 150ms ease;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
