--- a/templates/_formhelpers.html
+++ b/templates/_formhelpers.html
@@ -1,6 +1,6 @@
 {% macro render_field(field) %}
 <div>
-  <p>{{ field.label }}</p>
+  {{ field.label }}
   <div>
     {{ field (**kwargs) | safe }}
     {% if field.errors %}
