--- a/templates/reviewform.html
+++ b/templates/reviewform.html
@@ -11,7 +11,7 @@
       <form method="POST" action="/results">
         {{ render_field(form.moviereview, cols='50', rows='10') }}
         <div>
-          <input type="submit" value="Submit" name="submit_btn">
+          <input class="btn" type="submit" value="Submit" name="submit_btn">
         </div>
       </form>
     </div>
